--- a/meinberlin/assets/scss/components/_input_group.scss
+++ b/meinberlin/assets/scss/components/_input_group.scss
@@ -1,8 +1,8 @@
 // FIXME: this only works with buttons if it is included *afterwards*
 
-.input-group {
-    display: flex;
-}
+// .input-group {
+//     display: flex;
+// }
 
 .input-group__input {
     flex: 1 1 auto;
